# rlmf

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
pi_demo/: calibration.py  requirements_pi.txt  setup.sh  tripod_demo.py
src/: __init__.py  _cli.py  mdl.py  motors.py  robot.py
src/rlmf/: __init__.py  balance.py  controller.py  feedback.py  gaits.py  mdl.py  motors.py  robot.py
src/rlmf/robots/: __init__.py  centipede.yaml  hexapod.yaml  quadruped.yaml  spider.yaml
src/robots/: centipede.yaml  hexapod.yaml  quadruped.yaml  spider.yaml
tests/: test_rlmf.py
