[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project metadata ─────────────────────────────────────────────────────────

[project]
name = "rlmf"
version = "0.1.0"
description = "Robot Locomotion & Morphology Framework — universal legged-robot API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "Wafula Ian Elmer", email = "ianwelmer01@gmail.com" },
]

keywords = [
  "robotics",
  "locomotion",
  "hexapod",
  "quadruped",
  "inverse kinematics",
  "gait",
  "servo",
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

# Runtime dependencies — deliberately minimal so rlmf works everywhere,
# including environments where NumPy or ROS are not available.
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Hardware support for Raspberry Pi deployments
pi = [
  "adafruit-circuitpython-servokit>=1.3",
  "gpiozero>=2.0",
  "pigpio>=1.78",
]

# Developer toolchain
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "hatchling>=1.24",
  "build>=1.2",
  "twine>=5.1",
]

[project.urls]
Homepage      = "https://rlmf.vercel.app/"
Documentation = "https://github.com/Wafula-Ian01/rlmf/blob/main/README.md"
Repository    = "https://github.com/Wafula-Ian01/rlmf.git"
"Bug Tracker" = "https://github.com/Wafula-Ian01/rlmf/issues"

# ── CLI entry-point ──────────────────────────────────────────────────────────

[project.scripts]
rlmf = "rlmf._cli:main"

# ── Build ────────────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/rlmf"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
]


# ── Linting (ruff) ───────────────────────────────────────────────────────────

[tool.ruff]
src        = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

# ── Type checking (mypy) ─────────────────────────────────────────────────────

[tool.mypy]
python_version  = "3.10"
strict          = false
ignore_missing_imports = true

# ── Testing (pytest) ─────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short -q"

[tool.coverage.run]
source = ["src/rlmf"]
